--- a/caso_3/5-metabase-prod.deployment.yaml
+++ b/caso_3/5-metabase-prod.deployment.yaml
@@ -14,6 +14,12 @@ spec:
       labels:
         app: metabase
     spec:
+      initContainers:
+        - name: "sqlconnection-starter"
+          image: "mysql:9.0"
+          imagePullPolicy: "IfNotPresent"
+          command: ["sh", "-c", "mysql -h mysqldb -P 3306 -udbadmin -p8sdjoawl@lf2"]
+
       containers:
         - name: metabase
           image: metabase/metabase:v0.50.20.5
