--- a/caso_3/6-metabase-prod.ingress.yaml
+++ b/caso_3/6-metabase-prod.ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: nginx
+    spec.ingressClassName: nginx
   name: metabase-ingress 
 spec:
   rules:
